fixed alignment of homepage

--- a/blocks/home-projects/home-projects.css
+++ b/blocks/home-projects/home-projects.css
@@ -19,14 +19,14 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 40px;
-    max-width: 1200px !important;
+    max-width: 1440px;
     margin: 0 auto;
-    padding: 45px 0 0;
+    padding: 45px 20px 0;
+    box-sizing: border-box;
 }
 
 .home-projects.block .project-article div.project-image {
     box-sizing: border-box;
-    width: 90%;
     margin: 0 auto;
 }
 
@@ -42,7 +42,6 @@
 }
 
 .home-projects.block .project-article .project-metadata {
-    width: 90%;
     margin: 0 auto;
     box-sizing: border-box;
     overflow: hidden;
@@ -150,6 +149,7 @@ body.biencommun .home-projects.block .project-article:nth-child(even) {
 @media (width >= 900px) {
     .home-projects.block .project-article .parent-container {
         flex-direction: row;
+        padding: 45px 80px 0;
     }
 
     .home-projects.block .project-article div.project-image {
@@ -174,11 +174,6 @@ body.biencommun .home-projects.block .project-article:nth-child(even) {
 @media (width > 900px) and (width < 1340px) {
     .home-projects.block .project-article .project-metadata .buttons-container {
         position: relative;
-    }
-
-    .home-projects.block .project-article .parent-container {
-        margin-left: 80px;
-        margin-right: 80px;
     }
 
     .home-projects.block .project-article .project-metadata {
